--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-*.class
-*.log
+ogs
+project/project
+project/target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+.cache
+.target/
+/bin
+/nbproject
+node_modules/
+.DS_Store
+test-output
+.classpath
+.project
+.settings/
+.tmpBin
