account actor persistency added, inmemory journal config added

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -4,4 +4,10 @@ akka {
   actor {
     provider = local
   }
+
+  persistence {
+    journal.plugin = "inmemory-journal"
+    snapshot-store.plugin = "inmemory-snapshot-store"
+  }
+
 }
