--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,6 +25,11 @@ akka {
   cluster {
     seed-nodes = ["akka.tcp://wallet-system@127.0.0.1:2551"]
   }
+
+  persistence {
+    journal.plugin = "inmemory-journal"
+    snapshot-store.plugin = "inmemory-snapshot-store"
+  }
 }
 
 http {
